# spartan

./: CMakeLists.txt
setup/ubuntu/16.04/: install_prereqs.sh
